# yeti

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Jenkinsfile  README.md  deg = 1, deg_l = 0, d=0.1, u_inter=20, v_inter=20.csv  pyproject.toml  pytest.ini
doc/: CMakeLists.txt  build_yeti.txt
doc/source/: YETI.bib  conf.py  index.rst
doc/source/api/: iga_manipulation.rst  preprocessing.rst
doc/source/examples/: OPT_stiffPanel.rst
doc/source/theory/: bibliography.rst  embedded_sensitivities.rst
doc/source/usage/: build_cmake.rst  connectivity_convention.rst  coupling_modelling.rst  elements_library.rst  install_wsl.rst  installation.rst  load.rst  using_yeti.rst
doc/source/validation/: benchs.rst
src/: CMakeLists.txt  igaparmetrization.f90
src/coupling/: CMakeLists.txt  UCPGDISPMATRIX.f  build_cplgmatrix.f90  build_cplgmatrixU5.f90  build_cplgmatrixU5_1.f90  build_cplgmatrixU5_copy.f90  build_cplgmatrixU5_save.f90  build_cplgmatrixU5_wdatabase.f90  build_cplgmatrix_collocation copy.f90  build_cplgmatrix_collocation.f90  eval_coupling_gpts.f90  evaluatelgrgefcts.f
src/fitting/: CMakeLists.txt  __init__.py  grevilleAbscissae.f  grevillePhysicalCoords.f  interpolationMatrix.f
src/iga_wq_mf/: ..profile.swp  .gitignore  CMakeLists.txt  README.md  example.py
src/iga_wq_mf/ThermoMechaIGA/: Post_treatment.py  Simulations.py
src/iga_wq_mf/analysis/: IncSptHeat1D.py  IncSptHeat2D.py  IncSptHeat2D2.py  sptFD.py  sptMF.py
src/iga_wq_mf/analysisThesis/: t2dplasticity.py  t2dpreconditioner.py  t2dspacetime.py  t2preconditioner.py  testplasticvariables.py
src/iga_wq_mf/article/: .gitignore  IncSptHeat2D.py  input_data.py
src/iga_wq_mf/benchmark/: Ex1DHeat.py  Ex1DPlasticity.py  build.txt  dyn_eigenproblem1d.py  dyn_forceAtRodEnd.py  dyn_wavepropagation1d.py  elasticity1d.py  elasticity2d.py  plasticity2d.py  plasticity_inc1d.py  plasticity_spt1d.py  spacetime2d.py  steadyheat2d.py  t1delasticity.py  t1dplasticity.py  t1dtransientheat.py  t2dPatchTest.py  t2delasticity.py  t2delastodynamics.py  t2delastoplasticity.py  t2dpatchtest.py  t2dplasticity.py  t2dplasticity1.py  t2dspacetime.py  t2dsteadyheat.py  t2dthermomecha.py  t2multipatch.py  t3dspacetime.py  t3dsteady.py  t3dsteadyheat.py  t3dtransient.py  td2steadyheat.py  transientheat1d.py  viscoplasticity_inc1d.py  viscoplasticity_spt1d.py
src/iga_wq_mf/eccomas2024/: IncSptHeat1D.py  IncSptHeat2D.py  sptFD.py  sptMF.py
src/iga_wq_mf/fem/: __init__.py  fem_model.py
src/iga_wq_mf/fsrc/: .gitignore  algebra.f90  apply_mfheat.f90  apply_mfplasticity.f90  apply_mfstheat.f90  basis_weights.f90  bspline.f90  fast_diag.f90  fast_diagonalisation.f90  geophy.f90  iga_assembly.f90  iga_gk_assembly.f90  iga_wq_assembly.f90  iga_wq_basis_weights.f90  iga_wq_geophy.f90  iga_wq_methods.f90  iga_wq_mfprod.f90  lagrange_multiplier.f90  lib_basis_weights.f90  lib_bspline.f90  lib_datastructure.f90  lib_eigenproblem.f90  lib_heat_solver.f90  lib_heat_spmf.f90  lib_heat_transfer.f90  lib_heatsolver.f03  lib_heatsolver.f90  lib_iga_wq.f90  lib_linear_algebra.f90  lib_mfsolver_heat.f90  lib_mfsolver_plasticity.f90  lib_mfsolver_stheat.f90  lib_plasticity.f90  lib_plasticity2.f90  lib_plasticity_solver.f90  lib_plasticity_spmf.f90  lib_separationvariables.f90  lib_solver.f03  lib_stheat_solver.f90  lib_stheat_spmf.f90  (+25 more)
src/iga_wq_mf/others/: create_model2.py  dgfem.py  lib_base.py  lib_geometry.py  lib_material.py  lib_quadrules.py  model.py
src/iga_wq_mf/pysrc/: Ex1DHeat.py  Ex1DPlasticity1.py  Ex1DPlasticity2.py  Ex1DPlasticity3.py  Ex1DSpaceTime.py  Ex1DStability.py  Ex1DStructAnalysis.py  Ex1Dplasticity.py  Ex1Dplasticity2.py  Ex1DplasticityIgA.py  Ex1DplasticityWQ.py  Ex1Dtransient.py  ExStructAnalysis.py  Figures.py  StructuralAnalysis.py  phd_figures.py  space_time.py  stability.py  t2dPatchTest.py  t2delasticity.py  t2delasticity1.py  t2delastoplasticity.py  t2dplasticity.py  t2dplasticity1.py  t2dplasticity2.py  t3delasticity.py  t3dplasticity.py  t3dsteady.py  t3dtransient.py  test1_basis_weights.py  test1_basisweights.py  test2_assembly_symmetry.py  test3_setup.py  test4_interp_sol.py  test5_fast_diag.py  test5_matrixfree.py  test6_simulation.py  test6_steady.py  test7_TH.py  test7_TH1D3D.py  (+8 more)
src/iga_wq_mf/pysrc2/: Ex1DHeat.py  Ex1DPlasticity1.py  Ex1DPlasticity2.py  test1_basisweights.py  test6_steady.py  test7_transient.py  test8_elasticity.py  test9_plasticity.py
src/iga_wq_mf/thesis/: .gitignore  README.md
src/main/: GaussLegendre.f90  UELEXTVEC.f90  UELINTVEC.f90  UELMAT.f90  UELMAT_HO.f90  UELTANMAT.f90  build_system_elemStorage.f90  build_system_elemStorage_OMP.f90  build_system_elemStorage_OMP2.f90  dersbasisfuns.f90  extvec_elemStorage.f90  geommatrix.f90  geomvector.f90  intvec_elemStorage.f90  isElemOnFace.f90  m_nurbspatch.f90  main.f  material_lib.f90  material_lib_HO.f90  operateurs.f  point_inversion.f90  projection.f90  rigid_motion.f90  shap.f90  shap_HO.f90  stiffgeommatrix.f90  stiffmatrix.f  stiffmatrix_HO.f90  tanmtrx_elemStorage.f90  uelmat_solid_omp.f90
src/main/embedded/: UELMAT_embeddedvol.f  UELMAT_embeddedvol.f90
src/optim/: CMakeLists.txt  gradUELMAT_embeddedsolid.f90  gradUELMAT_solid.f  gradUELMAT_solid_v2.f90  graddisplacement_fullAN.f  gradtotalwork_fullAN.f  gradtotalwork_fullAN.f90  gradvolume.f  gradvolume.f90  volume.f  volume.f90
src/postprocessing/: CMakeLists.txt  compute_gram_matrix.f90  compute_svars_solid_HO.f90  compute_svars_solid_rhs.f90  evaluate_disp.f  generate_coupling_vtu.f90  postproc_curve_2D.f90  postproc_vtu.f  postproc_vtu_bezier.f90
src/preprocessing/igaparametrization/: DD_OPTmodelling.py  DD_feti.py  DD_subdomain.py  IGA_manipulation.py  IGA_parametrization.py  IGA_refinementFcts.py  OPT_modelling.py  bsplineDegreeElevation.py
src/preprocessing/mechanicalmodel/: common.py  group.py  model.py
src/solver/: pcpg.py  pseudoinverse.py
src/utils/: GaussPts.f90
src/yeti-iga/postprocessing/: postproc_faces.f90
src/yeti_iga/: CMakeLists.txt  __init__.py  exchange.py  igaparmetrization.f90  parameters.f90
src/yeti_iga/fitting/: CMakeLists.txt
(+1375 files in other folders)
