[project]
name = "yeti-iga"
# version = "0.0.3"
authors = [
    { name="Arnaud Duval", email="arnaud.duval@cnrs.fr" },
]
description = "Yeti is an IGA code"
readme =  "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy<=1.26.4", "scipy>=1.13"]

[project.urls]
Homepage = "https://lamcosplm.insa-lyon.fr/projects/yeti"
Issues = "https://lamcosplm.insa-lyon.fr/plugins/tracker/?tracker=626"

[build-system]
requires = ["scikit-build-core", "numpy", "meson", "ninja", "setuptools" , "setuptools_scm"]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-timestamp"

[tool.scikit-build]
cmake.version = ">=3.17.2"
cmake.verbose = true
logging.level =  "INFO"

[tool.cibuildwheel]
# build = "cp311-*"
# skip = "cp36-* cp37-* cp38-* cp39-* cp310-*  cp312-* *musllinux*"
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "cp36-* cp37-* cp38-*   *musllinux*"
archs = ["x86_64"]    #, "aarch64"]           # installer qemu-user-static pour l'arm64
manylinux-x86_64-image = "manylinux_2_28" # "manylinux2014"
before-build = "yum install -y blas-devel lapack-devel"
test-command = "pytest {project}/benchs"
test-requires = ["pytest"]

[tool.ruff]
src = ["src"]
